# rikabplotlib

./: LICENSE  README.md  pyproject.toml  setup.py  test.ipynb
src/examples/: test.ipynb
src/rikabplotlib/: plot_utils.py  rikab_column.mplstyle  rikab_full.mplstyle  rikab_full_notex.mplstyle
