[build-system]
requires = [
    "hatchling>=1.13.0",
    "hatch-vcs>=0.3.0",
]
build-backend = "hatchling.build"

[project]
name = "rikabplotlib"
version = "0.0.1"
description = "Plotting Library for Rikab"
readme = "README.md"
license = { text = "MIT" }  # SPDX short identifier
requires-python = ">=3.7"
authors = [
    { name = "Rikab Gambhir", email = "rikab@mit.edu" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy",  # compatible versions controlled through scipy
]





[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/rikabplotlib/_version.py"

[tool.hatch.build.targets.sdist]
# only-include files that are needed to ignore examples
only-include = [
    "/src",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rikabplotlib"]

[tool.coverage.run]
source = ["rikabplotlib"]
branch = true

[tool.coverage.report]
precision = 1
sort = "cover"
show_missing = true